@@ -5,6 +5,7 @@ sunuo (0.2.4) unstable; urgency=low
   * use log4net in exception handlers and more
   * load legacy scripts from local/src and local/lib if present
   * moved main BaseDirectory declaration to Config
+  * configure config file and base directory on the command line
 
  --
 
